[package]
name = "disco_bot_rust"
version = "0.1.0"
authors = ["xvi <xvi@xvisolutions.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
tokio-core = "0.1"
tokio-postgres = "0.5.5"
futures = "0.1"
futures-state-stream = "0.1"

